# claude-hub

./: .gitignore  .impeccable.md  CLAUDE.md  LICENSE  README.md  install.sh  logo-color-preview.html  logo-preview.html  pyproject.toml
.github/workflows/: release.yml
docs/: CHANGELOG.md  DECISIONS.md  DISTRIBUTION.md  FAILURES.md  ROADMAP.md
docs/superpowers/plans/: 2026-03-22-phase7a-wizard-skillgen.md  2026-03-31-mcp-registry-integration.md
docs/superpowers/specs/: 2026-03-21-phase6-ux-improvements.md  2026-03-22-phase7-wow-features.md  2026-03-31-mcp-registry-integration-design.md
scripts/: build.sh  ralph-start.sh  release.sh
scripts/macos/: create-app.sh
src/claude_hub/: __init__.py  config.py  main.py  tracker.py
src/claude_hub/assets/: claude-hub.icns
src/claude_hub/data/: mcp_servers.json
src/claude_hub/models/: __init__.py  agent.py  command.py  common.py  hook.py  mcp.py  plugin.py  settings.py  skill.py
src/claude_hub/routers/: agents.py  analysis.py  backups.py  claude_md.py  claude_settings.py  commands.py  cost.py  dashboard.py  hooks.py  hub_settings.py  keybindings.py  marketplace.py  mcp.py  memory.py  monitor.py  plugins.py  sessions.py  settings.py  skills.py  stats.py  teams.py  templates.py  update.py  wizard.py
src/claude_hub/services/: analyzer.py  backup.py  claude_connection.py  config_diff.py  cost.py  editor.py  log_parser.py  marketplace.py  mcp_registry.py  merge.py  scanner.py  session_browser.py  session_watcher.py  skill_comparator.py  templates.py  usage_db.py  validator.py  wizard.py
src/claude_hub/utils/: claude_cli.py  diff.py  filelock.py  frontmatter.py  paths.py
src/client/: index.html  package-lock.json  package.json  vite.config.ts
src/client/src/: App.tsx  index.css
tests/: conftest.py  test_backup.py  test_editor.py  test_merge.py  test_scanner.py  test_usage_db.py  test_utils.py  test_validator.py
tests/test_routers/: conftest.py  test_agents.py  test_backups.py  test_commands.py  test_dashboard.py  test_hooks.py  test_keybindings.py  test_marketplace.py  test_mcp.py  test_memory.py  test_monitor.py  test_plugins.py  test_settings.py  test_skills.py  test_stats.py  test_teams.py  test_templates.py  test_wizard.py
tests/test_services/: test_mcp_registry.py
(+49 files in other folders)
