[project]
name = "claude-hub"
version = "0.1.0"
description = "Visual dashboard for managing Claude Code harness configuration"
requires-python = ">=3.13"
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "python-frontmatter>=1.1",
    "pydantic>=2.10",
    "httpx>=0.28",
]

[project.scripts]
claude-hub = "claude_hub.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_hub"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
]
